# gtk-game-of-life

./: .gitignore  CMakeLists.txt  Makefile  README.md  button_callbacks.c  compile.sh  main.c
core/: buttons.c  buttons.h
src/: button_callbacks.c  button_callbacks.h  cell.h  style.h
src/frontend/: application.c  application.h  button_bar.c  button_bar.h  button_callbacks.c  main_window.c  main_window.h
